@@ -1,6 +1,7 @@
 Revision history for Perl application Lstu
 
 0.24-0 ????-??-??
+	- ✨ Allow to sort results in admin stats page (#91)
 
 0.23-1 2021-04-??
 	- Fix disabled URLs still showing in admin interface (#79)
